--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost5432/restaurant_tracker
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_tracker
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
